# example-hello-c-lib

./: .gitignore  CMakeLists.txt  README.md  simpleMakefile
include/: hello.h
src/: CMakeLists.txt  hello.c
tests/: CMakeLists.txt  testhello.c
